--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Quotes Generator</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Quotes Generator</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
 </head>
+
 <body>
-    <header>
-        <h1>AI Quotes Generator</h1>
-    </header>
-    <div class="container">
-        <div id="quoteContainer">
-            <p id="quoteText"></p>
-        </div>
-        <button id="getQuoteBtn" style="background-color: 3498db;">Get Quote</button>
+  <header>
+    <h1>AI Quotes Generator</h1>
+  </header>
+
+  <div class="container">
+    <div id="quoteContainer">
+      <p id="quoteText">Click the button to get inspired!</p>
+      <p id="quoteAuthor"></p>
+      <div id="quoteTags"></div>
     </div>
-    <script src="script.js"></script>
+    <button id="getQuoteBtn">Get Quote</button>
+  </div>
+
+  <footer style="margin-top: auto; padding: 20px; color: #fff; text-align: center; font-size: 14px;">
+    Created by Utkarsh Batham
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
